# getvid

./: .env.example  .gitignore  README.md  pyproject.toml
getvid_bot/: __init__.py  config.py  downloader.py  main.py
